# NEW_HW06

./: main.py  new_hw06.sqlite  pyproject.toml
