[tool.poetry]
name = "new-hw06"
version = "0.1.0"
description = ""
authors = ["Yevheniy Petrenko <yevheniipetrenko92@gmail.com>"]
readme = "README.md"
packages = [{include = "new_hw06"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.6"
faker = "^18.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
